--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,3 +7,8 @@ edition = "2018"
 [dependencies]
 nom = "5.0.1"
 clap = "2.33.0"
+unicode-reverse = "1.0.8"
+
+[dependencies.rand]
+version = "0.7.2"
+features = ["small_rng"]
